@@ -135,6 +135,13 @@ public enum Language {
     DART(dart(), "dart"),
 
     /**
+     * Dockerfile: domain-specific language used for building a Docker image.
+     *
+     * @see <a href="https://github.com/camdencheek/tree-sitter-dockerfile">tree-sitter-dockerfile</a>
+     */
+    DOCKERFILE(dockerfile()),
+
+    /**
      * DOT graph description language.
      *
      * @see <a href="https://github.com/rydesun/tree-sitter-dot">tree-sitter-dot</a>
@@ -518,6 +525,7 @@ public enum Language {
     private static native long css();
     private static native long csv();
     private static native long dart();
+    private static native long dockerfile();
     private static native long dot();
     private static native long dtd();
     private static native long elixir();
@@ -610,11 +618,21 @@ public enum Language {
                 "Path argument must not be a directory!"
         );
         String name = path.getFileName().toString();
-        if (name.equals("requirements.txt")) return List.of(REQUIREMENTS);
-        String extension = FilenameUtils.getExtension(name);
-        return Optional.of(extension)
-                .map(EXTENSION_LOOKUP::get)
-                .orElseGet(Collections::emptyList);
+        switch (name) {
+            case "docker":
+            case "container":
+            case "Dockerfile":
+            case "dockerfile":
+            case "Containerfile":
+                return Collections.singletonList(DOCKERFILE);
+            case "requirements.txt":
+                return Collections.singletonList(REQUIREMENTS);
+            default:
+                String extension = FilenameUtils.getExtension(name);
+                return Optional.of(extension)
+                        .map(EXTENSION_LOOKUP::get)
+                        .orElseGet(Collections::emptyList);
+        }
     }
 
     private static native int version(long id);
@@ -770,6 +788,7 @@ public enum Language {
             case BASH:
             case CLOJURE:
             case DART:
+            case DOCKERFILE:
             case ELIXIR:
             case ELM:
             case ERLANG:
